style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap');


:root {
    /*=== Colors ===*/
    --title-color: #323453;
    --text-color: #7D7C87;
    --white-color: #F8F8FC;
    --orange-color: #FF6D5B;
    --yellow-color: #FFCA52;
    --blue-color: #6574EE;

    /*=== Fonts Size ===*/
    --body-font: 'Rubik', sans-serif;
    --h1-size: 2.25rem;
    --h2-size: 1.7rem;
    --h3-size: 1.375rem;
    --normal-size: 1.25rem;
    --small-size: 1rem;
    --smaller-size: 0.875rem;

    /*=== Fonts Weight===*/
    --font-medium: 500;
    --font-semibold: 600;
    --font-bold: 700;
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body,
button {
    font-family: var(--body-font);
    font-size: var(--normal-size);
}

body {
    background-color: var(--white-color);
    line-height: 1.7;
    color: var(--text-color);
}

h1,
h2,
h3 {
    color: var(--title-color);
    line-height: 1.2;
}

h1 {
    font-size: var(--h1-size);
}



h3 {
    font-size: var(--h3-size);
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

img {
    max-width: 100%;
    height: auto;
    vertical-align: middle;
}

.nav-bar {
    background-color: var(--title-color);
    display: flex;
    justify-content: space-between;
    padding: 1rem 3rem;
    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.25);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
}

.nav-bar ul {
    display: flex;
    gap: 2.5rem;
}

.nav-bar a {
    color: var(--white-color);
    font-weight: var(--font-medium);
}

.nav-bar a:hover {
    color: #c0bdd7;
}

#home {
    width: 100%;
    height: 100vh;
    background-image: url(./asset/bg_img.png);
    background-position: center;
    background-size: contain;
    display: flex;
    align-items: center;
    justify-content: center;
}

.profile-info {
    max-width: 60%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 0.5rem;
}

.profile-img img {
    width: 14rem;
    aspect-ratio: 1/1;
    object-fit: cover;
    border-radius: 50%;
    margin-top: 4rem;
    box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.25);
}

.profile-description h1 {
    font-size: var(--h1-size);
}

.profile-description p {
    font-weight: var(--font-semibold);
    color: var(--title-color);
}

.profile-description p span {
    color: var(--yellow-color);
    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.25);
}

.profile-contact ul {
    display: flex;
    gap: 2rem;
    font-size: var(--h1-size);
}

.profile-contact a {
    color: var(--title-color);
}

.profile-contact a:hover {
    color: var(--text-color);
}

.button-orange {
    background-color: var(--orange-color);
    font-weight: var(--font-semibold);
    font-size: var(--small-size);
    padding: 0.55rem 1.3rem;
    border-radius: 100px;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
    transition: transform .1s;
    text-align: center;
    width: fit-content;
    margin: 0 auto;
}

.button-orange a {
    color: var(--white-color);
}

.button-orange:hover {
    transform: scale(1.05);
}

.container {
    width: 85%;
    margin: 0 auto;
    padding: 2rem 0;
}

#work {
    padding-top: 2rem;
}

.work-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 3.5rem;
    margin: 2rem 0;
    justify-content: center;
}

.work-card {
    border-radius: 50px;
    box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
    transition: all .1s;
    height: fit-content;
}

.work-card img {
    width: 100%;
    height: 70%;
    border-top-left-radius: 50px;
    border-top-right-radius: 50px;
    aspect-ratio: 1.2 / 1;
    object-fit: cover;
}

.work-description {
    background-color: #FFF;
    border-bottom-left-radius: 50px;
    border-bottom-right-radius: 50px;
    padding: 1rem 1.75rem;
    height: 30%;
    line-height: 1.3;
}

.work-card a:visited, .work-card a:link {
    color: var(--text-color);
}

.work-card:hover {
    transform: scale(1.02);
}

.work-description p {
    font-size: var(--smaller-size);
    margin-top: 0.3rem;
}

.work-description h3 {
    font-size: var(--normal-size);
}

.skill-con {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 1.5rem;
    gap: 0.5rem;
}

.skill-lists {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2.5rem;
    margin-bottom: 1.5rem;
}

.skill-box {
    text-align: center;
    background-color: #FFF;
    padding-top: 0.7rem;
    padding-bottom: 0.2rem;
    border-radius: 5px;
    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.25);
    width: 7rem;
}

.skill-box p {
    font-weight: var(--font-semibold);
    color: var(--title-color);
    font-size: var(--small-size);
    margin-top: 0.5rem;
}

.skill-box img {
    width: 50px
}

.act-slide {
    display: flex;
    justify-content: center;
    margin-top: 2rem;
}

.act-box {
    width: 30rem;
    height: 18rem;
    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)),
        url(./asset/lifebrary.jpg);
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: end;
    padding: 1rem 1.5rem;
    border-radius: 10px;
    box-shadow: 2px 2px 4px 0 rgba(0, 0, 0, 0.25);
    background-position: center;
}

.act-box h3 {
    color: var(--white-color);
}

.act-box p {
    font-size: var(--small-size);
    color: var(--text-color);
}

footer {
    background-color: var(--title-color);
    width: 100%;
    color: var(--white-color);
    font-size: var(--smaller-size);
    text-align: center;
    padding: 1rem;
    margin-top: 2rem;
}

/*=== For Tablet ===*/
@media screen and (max-width: 790px) {
    .work-grid {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
        gap: 3rem;
        margin: 2rem 0;
    }

    .work-card {
        width: 80%;
        margin: 0 auto;
    }

    .work-card p {
        font-size: var(--small-size);
    }

    #work h2 {
        text-align: center;
    }

    .profile-info {
        max-width: 75%;
    }

    .skill-box p {
        color: var(--title-color);
        font-size: var(--smaller-size);
        margin-top: 0.3rem;
    }

    .skill-box img {
        width: 30px
    }

    .skill-lists {
        gap: 1rem;
    }

    .skill-box {
        width: 6rem;
    }

    .nav-bar {
        align-items: center;
        padding: 1rem 2rem;
    }

    .nav-bar ul {
        gap: 1.2rem;
    }

    .nav-bar a {
        font-size: var(--small-size);
    }

    .container {
        padding: 1.5rem 0;
    }

    .act-box h3 {
        font-size: var(--normal-size);
    }

    .act-box p {
        font-size: var(--smaller-size);
    }
}

/*=== For Phone ===*/
@media screen and (max-width: 470px) {

    .profile-info h1,
    .profile-contact ul {
        font-size: var(--h2-size);
    }

    .profile-description p {
        font-size: var(--small-size);
    }

    .profile-img {
        margin-bottom: 1rem;
    }

    .nav-bar {
        padding: 0.7rem 1.7rem;
    }

    .nav-bar a {
        font-size: var(--smaller-size);
    }

    .work-card h3 {
        font-size: var(--small-size);
    }
    
    .work-description {
        padding: 0.6rem 2rem 0.8rem;
    }

    .skill-box {
        width: 4.5rem;
    }

    .skill-box p {
        font-size: 0.65rem;
    }

    footer {
        font-size: 0.7rem;
    }

    .skill-lists {
        flex-wrap: wrap;
        justify-content: center;
    }

    .act-box h3 {
        font-size: var(--small-size);
    }

    .profile-img img {
        width: 10rem;
    }
}

